# AgentEnv-Forge

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-bounded-offline-browser.md
docs/releases/: 2026-07-20-m3b.md
sandbox/: Dockerfile  Dockerfile.dockerignore
src/agentenv_forge/: __init__.py  cli.py  runner.py  schemas.py
src/agentenv_forge/adapters/: __init__.py  base.py  scripted.py
src/agentenv_forge/mcp/: __init__.py  browser_client.py  browser_server.py  browser_site.py  client.py  research.py  server.py
src/agentenv_forge/sandbox/: __init__.py  docker.py  process.py
src/agentenv_forge/tasks/: __init__.py  browser-evaluation-001.json  (+4 more)
tests/: test_action_budget.py  test_adapter_contract.py  test_agent_runner.py  test_bounded_process.py  test_browser_agent_runner.py  test_browser_episode_integration.py  test_browser_mcp_stdio.py  test_browser_site.py  test_browser_tools.py  test_cli.py  test_container_config.py  test_docker_agent_episode_config.py  test_docker_agent_episode_integration.py  test_docker_sandbox.py  test_docker_sandbox_integration.py  test_documentation_contract.py  test_m2_task_matrix.py  test_research_agent_runner.py  test_research_mcp.py  test_research_mcp_episode_integration.py  test_research_mcp_stdio.py  test_research_tools.py  test_runner.py  test_scripted_adapter.py  test_task_schema.py  test_terminal_agent_runner.py  test_terminal_environment_runner.py  test_terminal_tools.py  test_workspace_security.py  test_workspace_tools.py
(+6 files in other folders)
